Add a heading for website visitors

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body style="background-color: #cdacff;"></body>
 
 <h1 style="text-align: center;">Hello World!</h1>
+<h2 style="font-family: century-gothic; text-align: center;">...and hello to our website visitors :)</h2>
 
-<p> style="text-align: center;">Jackie G., Samantha P., Jean L., and Joy P.!></p>
+<p style="text-align: center;">Jackie G., Samantha P., Jean L., and Joy P.!></p>
 
 </body>
 
