Fix style tag for background image in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <style="background-image: url("backgroundimg.jpg");">
+  <style="background-image: url("backgroundimg.jpg");"></style>
   
 </head>
 
