--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   
 </head>
 
-<body>
-
-   <style="background-image: url("backgroundimg.jpg");"></style>
+<body style="background-image: url("backgroundimg.jpg");">
 
     <header style="color: #f9f9f9; margin: none; width: 100%; height: 100%;"></header>
      <header style="background-color: rgb(255, 255, 255); margin: none; width: 100%; height: 100%;">
